fix overflow error in firefox due to positioning of 3d faces being relative instead of absolute

--- a/main.css
+++ b/main.css
@@ -48,7 +48,7 @@ img {
     color: #007ea5;
 }
 #landing {
-    position: relative;
+    position: absolute;
     overflow: hidden;
     width: 100%;
     height: 100%;
@@ -61,27 +61,10 @@ img {
     justify-content: center;
     filter: drop-shadow(0 0 20px #13151f);
 }
-.star {
-    border-radius: 50%;
-    position: absolute;
-    z-index: 1;
-    mix-blend-mode: screen;
-    transform: translateX(0);
-    animation-name: animate-star;
-    animation-timing-function: linear;
-    animation-fill-mode: forwards;
-}
-@keyframes animate-star {
-    from {
-        transform: translateX(0);
-    }
-    to {
-        transform: translateX(-101vw);
-    }
-}
-
 
 #home {
+    position: absolute;
+    top: 100%;
     filter: drop-shadow(0 0 20px #13151f);
     padding: 2rem;
     color: white;
@@ -96,7 +79,16 @@ img {
     transform: rotateX(-90deg);
     transform-origin: top;
 }
-#home h1 {
-    margin: 4rem;
-    font-size: 2rem;
+
+#container {
+    max-width: 60rem;
+}
+
+.section {
+    font-size: 1.2rem;
+    margin: 5rem 0 5rem 0;
+}
+
+.section h1 {
+    margin: 0 0 2rem 0;
 }
